objects/LLC_BI__Risk_Grade_Criteria__c.object
<CustomObject>
    <description>Used in conjunction with the annual review</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It must be manually populated. It is only populated if its associated Risk Grade Factor&apos;s &quot;LLC_BI__Type__c&quot; is &quot;Qualitative&quot;.</description>
        <inlineHelpText>This field is used when configuring a qualitative criteria.</inlineHelpText>
        <label>Qualitative Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__High__c</fullName>
        <description>This field is optional. It must be manually populated. It is only populated if its associated Risk Grade Factor&apos;s &quot;LLC_BI__Type__c&quot; is &quot;Quantitative&quot;. This field sets the highest value which is still within the range of the value set for &quot;Risk_Grade__c&quot; on this record. If the risk grade on this record does not have a high limit, this field should be left blank.</description>
        <label>High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Low__c</fullName>
        <description>This field is optional. It must be manually populated. It is only populated if its associated Risk Grade Factor&apos;s &quot;LLC_BI__Type__c&quot; is &quot;Quantitative&quot;. This field sets the lowest value which is still within the range of the value set for &quot;Risk_Grade__c&quot; on this record. If the risk grade on this record does not have a low limit, this field should be left blank.</description>
        <label>Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__QV_Index__c</fullName>
        <description>This field is optional. It is set by an administrator. The qualitative value for qualitative records or NULL if the criteria is quantitative. Enhances performance when selecting out criteria.</description>
        <externalId>true</externalId>
        <label>QV_Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Factor__c</fullName>
        <description>This field is required. It is populated automatically when creating a risk grade criteria from a risk grade factor. This field specifies the risk grade factor associated with the risk grade criteria.</description>
        <label>Risk Grade Factor</label>
        <referenceTo>LLC_BI__Risk_Grade_Factor__c</referenceTo>
        <relationshipLabel>Risk Grade Criterias</relationshipLabel>
        <relationshipName>Risk_Grade_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade__c</fullName>
        <description>This field is required. It must be manually populated. This field specifies the risk grade value associated to a given option (if risk grade factor is qualitative) or range (if risk grade factor is quantitative). Whenver a user selects an option or enters a value within this range, this value is used to calculate the risk grade for a group (if a risk grade group is associated to the risk grade facotr) or the the calculated risk grade (if not)</description>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Risk Grading Criteria</label>
    <nameField>
        <displayFormat>RGC-{000000000}</displayFormat>
        <label>Risk Grading Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Grading Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__higher_than_low</fullName>
        <active>true</active>
        <description>The high value needs to be higher than the low value.</description>
        <errorConditionFormula>LLC_BI__High__c &lt;  LLC_BI__Low__c</errorConditionFormula>
        <errorDisplayField>LLC_BI__High__c</errorDisplayField>
        <errorMessage>The high value needs to be larger than the low value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__lower_than_high</fullName>
        <active>true</active>
        <description>The low value needs to be lower that the high value</description>
        <errorConditionFormula>LLC_BI__Low__c &gt;  LLC_BI__High__c</errorConditionFormula>
        <errorDisplayField>LLC_BI__Low__c</errorDisplayField>
        <errorMessage>The low value cannot be larger than the high value.</errorMessage>
    </validationRules>
</CustomObject>